--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -26,7 +26,7 @@
     mode: '0600'
 
 - name: Copier le docker-compose pour PostgreSQL
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: ../../../docker/stateful/postgres/docker-compose.yml
     dest: "{{ docker_compose_path }}/postgres/docker-compose.yml"
     mode: '0644'
@@ -66,7 +66,7 @@
     mode: '0600'
 
 - name: Copier le docker-compose pour Redis
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: ../../../docker/stateful/redis/docker-compose.yml
     dest: "{{ docker_compose_path }}/redis/docker-compose.yml"
     mode: '0644'
