--- a/docker/app/jellyfin/docker-compose.yml
+++ b/docker/app/jellyfin/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   jellyfin:
-    image: docker.io/jellyfin/jellyfin:latest
+    image: docker.io/jellyfin/jellyfin:{{ docker_versions.jellyfin }}
     container_name: jellyfin
     hostname: jellyfin-server
     restart: always
