Switch to Docker Socket Proxy for improved security:
- Replace direct Docker socket mounts with `docker-socket-proxy` in Traefik and monitoring stack.
- Update Ansible templates and Docker Compose files to use the proxy (`http://docker-socket-proxy:2375`).
- Add `docker-socket-proxy` service to both Traefik and monitoring Compose files with health checks and necessary environment variables.
- Create an isolated `docker-socket` network for communication with the proxy.
- Remove direct Docker socket mounts from services and adjust health checks accordingly.
- Update `group_vars` to include `docker_socket_proxy` version.

--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -110,6 +110,7 @@ fail2ban_maxretry: 5
 
 # Versions des images Docker
 docker_versions:
+  docker_socket_proxy: "latest"
   traefik: "v3.6.6"
   postgres: "pg16-v0.4.0"
   redis: "8-alpine"
