Refactor PostgreSQL initialization and resource configuration:
- Remove old PostgreSQL and application-specific initialization scripts.
- Introduce service-specific database initialization scripts for Immich and Nextcloud.
- Standardize database volumes, health checks, and dependencies in Docker Compose files.
- Refactor Ansible tasks to reflect new script locations and paths.
- Update network connections and environment variables for improved modularity and security.

--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -9,7 +9,7 @@
   loop:
     - "{{ data_path }}/immich/upload"
     - "{{ data_path }}/immich/model-cache"
-    - "{{ data_path }}/immich/postgres"
+    - "{{ data_path }}/immich/db"
     - "{{ docker_compose_path }}/immich"
 
 - name: Copier le script d'initialisation PostgreSQL
