--- a/docker/app/nextcloud/docker-compose.yml
+++ b/docker/app/nextcloud/docker-compose.yml
@@ -1,4 +1,32 @@
 services:
+  nextcloud-db:
+    image: postgres:{{ docker_versions.postgres_nextcloud | default('16-alpine') }}
+    container_name: nextcloud_db
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ${DATA_PATH}/nextcloud/db:/var/lib/postgresql/data
+      - ./init-nextcloud-db.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - default
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
   nextcloud:
     image: nextcloud:{{ docker_versions.nextcloud }}
     container_name: nextcloud
@@ -12,6 +40,9 @@ services:
           cpus: '0.2'
           memory: 512M
     env_file: .env
+    depends_on:
+      nextcloud-db:
+        condition: service_healthy
     volumes:
       - ${DATA_PATH}/nextcloud:/var/www/html
       - /mnt/cloud:/var/www/html/data
