Refactor database management and monitoring:
- Decouple PostgreSQL instances for Immich and Nextcloud; integrate dedicated database services into their respective configurations.
- Update Ansible tasks and templates to set up application-specific PostgreSQL directories, initialization scripts, and `.env` configurations.
- Remove shared PostgreSQL stack; retain only Redis as a shared service.
- Adapt Prometheus and exporters for separate PostgreSQL instances, with tailored health checks and alert rules.
- Refactor Ansible playbooks and group variables to reflect the new architecture.
- Update monitoring stack templates and Grafana dashboards to support the revised database setup.

--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -46,8 +46,8 @@ nfs_backup_mount:
 
 # Services activés
 enabled_services:
-  - shared-services  # Postgres + Redis mutualisés
   - traefik
+  - redis
   - immich
   - jellyfin
   - nextcloud
