--- a/docker/monitoring/docker-compose.yml
+++ b/docker/monitoring/docker-compose.yml
@@ -99,25 +99,18 @@ services:
       docker-socket-proxy:
         condition: service_healthy
 
-  postgres-exporter:
+  nextcloud-postgres-exporter:
     image: prometheuscommunity/postgres-exporter:{{ docker_versions.postgres_exporter }}
-    container_name: postgres-exporter
+    container_name: nextcloud_postgres_exporter
     restart: unless-stopped
     deploy:
       resources:
         limits:
           cpus: '0.1'
-          memory: 256M
-        reservations:
-          cpus: '0.05'
           memory: 128M
     environment:
-      DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-postgres}?sslmode=disable"
-      PG_EXPORTER_EXTEND_QUERY_PATH: "/etc/postgres_exporter/queries.yaml"
+      DATA_SOURCE_NAME: "postgresql://${NEXTCLOUD_DB_USER}:${NEXTCLOUD_DB_PASSWORD}@nextcloud-db:5432/${NEXTCLOUD_DB_NAME}?sslmode=disable"
       PG_EXPORTER_DISABLE_DEFAULT_METRICS: "false"
-      PG_EXPORTER_DISABLE_SETTINGS_METRICS: "false"
-    volumes:
-      - ./postgres-exporter/queries.yaml:/etc/postgres_exporter/queries.yaml:ro
     networks:
       - monitoring
       - traefik-proxy
@@ -126,7 +119,27 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+
+  immich-postgres-exporter:
+    image: prometheuscommunity/postgres-exporter:{{ docker_versions.postgres_exporter }}
+    container_name: immich_postgres_exporter
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 128M
+    environment:
+      DATA_SOURCE_NAME: "postgresql://${IMMICH_DB_USER}:${IMMICH_DB_PASSWORD}@immich-postgres:5432/${IMMICH_DB_NAME}?sslmode=disable"
+      PG_EXPORTER_DISABLE_DEFAULT_METRICS: "false"
+    networks:
+      - monitoring
+      - traefik-proxy
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9187/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   redis-exporter:
     image: oliver006/redis_exporter:{{ docker_versions.redis_exporter }}
