--- a/docker/app/nextcloud/docker-compose.yml
+++ b/docker/app/nextcloud/docker-compose.yml
@@ -1,8 +1,38 @@
 services:
+  nextcloud-db:
+    image: postgres:16-alpine
+    container_name: nextcloud_db
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ${DATA_PATH}/nextcloud/postgres:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - default
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   nextcloud:
-    image: nextcloud:{{ docker_versions.nextcloud }}
+    image: nextcloud:{{ docker_versions.nextcloud | default('32.0.5') }}
     container_name: nextcloud
     restart: always
+    depends_on:
+      nextcloud-db:
+        condition: service_healthy
     deploy:
       resources:
         limits:
